@@ -6,7 +6,6 @@ import com.company.ecommerce.domain.Orders;
 import com.company.ecommerce.domain.Payment;
 import com.company.ecommerce.dto.HttpApiResponse;
 import com.company.ecommerce.dto.request.OrderRequestDto;
-import com.company.ecommerce.dto.response.OrderItemResponseDto;
 import com.company.ecommerce.dto.response.OrderResponseDto;
 import com.company.ecommerce.enums.DeliveryType;
 import com.company.ecommerce.enums.OrderStatus;
@@ -18,13 +17,16 @@ import com.company.ecommerce.service.mapper.PaymentMapper;
 import com.company.ecommerce.service.utils.ResponseUtils;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class OrderServiceImpl implements OrderService {
@@ -37,14 +39,22 @@ public class OrderServiceImpl implements OrderService {
     private final OrderItemMapper orderItemMapper;
     private final PaymentRepository paymentRepository;
     private final PaymentMapper paymentMapper;
+    private final OrderItemRepository orderItemRepository;
 
     @Transactional
     @Override
     public HttpApiResponse<OrderResponseDto> createOrder(OrderRequestDto dto) {
-        // todo: 1 -> UserId boyicha CartItem larni topish kerak
+
         List<CartItem> allByUsersId = cartItemRepository.findAllByUsers_Id(dto.getUserId());
 
-        // todo: 2 -> CartItem larni OrderItem ga o'tkazish kerak
+        Orders orders = new Orders();
+        orders.setDeliveryType(DeliveryType.fromValue(dto.getDeliveryTypeIndex()));
+        orders.setOrderDate(LocalDateTime.now());
+        orders.setOrderStatus(OrderStatus.NEW);
+        orders.setUsers(userRepository.findByIdAndDeletedAtIsNull(dto.getUserId()).get());
+        orders.setDeliveryAddress(addressRepository.findByIdAndDeletedAtIsNull(dto.getDeliveryAddressId()).get());
+
+        Orders saved = orderRepository.save(orders);
 
         List<OrderItem> orderItems = allByUsersId
                 .stream()
@@ -52,39 +62,28 @@ public class OrderServiceImpl implements OrderService {
                     OrderItem orderItem = new OrderItem();
                     orderItem.setProduct(cartItem.getProduct());
                     orderItem.setQuantity(cartItem.getQuantity());
-
-                    System.out.println(cartItem.getProduct().getPrice());
-                    System.out.println(cartItem.getQuantity());
-                    System.out.println(cartItem.getProduct().getPrice() * cartItem.getQuantity());
-                    double priceAtTime = cartItem.getProduct().getPrice() * cartItem.getQuantity();
-                    System.out.println(priceAtTime);
+                    orderItem.setOrders(saved);
+                    double priceAtTime = cartItem.getProduct().getPrice();
                     orderItem.setPriceAtTime(priceAtTime);
-
                     return orderItem;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
-        // todo: 3 -> OrderItem larni Orderga set qilish kerak
-
-        Orders orders = new Orders();
-        orders.setDeliveryType(DeliveryType.fromValue(dto.getDeliveryTypeIndex()));
-        orders.setOrderDate(LocalDateTime.now());
-        orders.setOrderStatus(OrderStatus.NEW);
-        orders.setOrderItems(orderItems);
         double orderPrice = orderItems.stream()
-                .mapToDouble(OrderItem::getPriceAtTime)
+                .mapToDouble(orderItem-> orderItem.getPriceAtTime() * orderItem.getQuantity())
                 .sum();
-        orders.setOrderPrice(orderPrice);
-        orders.setUsers(userRepository.findByIdAndDeletedAtIsNull(dto.getUserId()).get());
-        orders.setDeliveryAddress(addressRepository.findByIdAndDeletedAtIsNull(dto.getDeliveryAddressId()).get());
 
-        Orders saved = orderRepository.save(orders);
+        saved.setOrderPrice(orderPrice);
+        orders.setOrderItems(orderItems);
+
+        Orders orders1 = orderRepository.save(saved);
 
         cartItemRepository.deleteAllByUsers_Id(dto.getUserId());
 
         return HttpApiResponse.<OrderResponseDto>builder()
                 .success(true)
                 .status(HttpStatus.CREATED)
+                .content(orderMapper.toDto(orders1))
                 .responseCode(HttpStatus.CREATED.value())
                 .message("Successfully created Order")
                 .build();
@@ -105,9 +104,7 @@ public class OrderServiceImpl implements OrderService {
         Orders orders = optional.get();
 
         OrderResponseDto dto = orderMapper.toDto(orders);
-        List<OrderItemResponseDto> list = orders.getOrderItems().stream().map(orderItemMapper::toDto).toList();
-        System.out.println(list);
-        dto.setOrderItems(list);
+        dto.setOrderItems(orderItemMapper.toDtoList(orders.getOrderItems()));
         dto.setPayment(paymentMapper.toDto(optionalPayment.get()));
 
         return HttpApiResponse.<OrderResponseDto>builder()
@@ -121,6 +118,43 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     public HttpApiResponse<List<OrderResponseDto>> getAllOrdersByUsersId(Long userId) {
-        return null;
+        List<Orders> orders = orderRepository.findAllByUsers_IdAndDeletedAtIsNull(userId);
+        if (orders.isEmpty())
+            return HttpApiResponse.<List<OrderResponseDto>>builder()
+                    .message("No orders yet")
+                    .status(HttpStatus.NO_CONTENT)
+                    .responseCode(HttpStatus.NO_CONTENT.value())
+                    .success(true)
+                    .build();
+
+        List<OrderResponseDto> dtoList = orderMapper.toDtoList(orders);
+
+        return HttpApiResponse.<List<OrderResponseDto>>builder()
+                .success(true)
+                .responseCode(HttpStatus.OK.value())
+                .content(dtoList)
+                .message("OK")
+                .status(HttpStatus.OK)
+                .build();
+    }
+
+    @Override
+    public HttpApiResponse<OrderResponseDto> updateOrderStatusById(Long orderId, Integer orderStatusIndex) {
+        Optional<Orders> optional = orderRepository.findById(orderId);
+        if (optional.isEmpty())
+            return ResponseUtils.buildNotFoundResponse("Order", orderId);
+
+        Orders orders = optional.get();
+        orders.setOrderStatus(OrderStatus.fromValue(orderStatusIndex));
+
+        Orders updated = orderRepository.save(orders);
+
+        return HttpApiResponse.<OrderResponseDto>builder()
+                .status(HttpStatus.OK)
+                .message("Successfully updated Status")
+                .content(orderMapper.toDto(updated))
+                .success(true)
+                .responseCode(HttpStatus.OK.value())
+                .build();
     }
 }
